Fixed horizontal scrolling issues, removed emoji from 404 page

--- a/scss/main/_base.scss
+++ b/scss/main/_base.scss
@@ -19,6 +19,7 @@ html {
 body {
   font-family: $tf-body;
   background-color: $body-background-color;
+  overflow-x: hidden;
 }
 
 // ==========================================================================
